force-app/main/default/objects/BadgeUrls__c/BadgeUrls__c.object-meta.xml
<CustomObject>
    <label>Badge Urls</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Badge Urls Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Urls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>