force-app/main/default/objects/BadgeUrls__c/fields/Clan__c.field-meta.xml
<CustomField>
    <fullName>Clan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clan</label>
    <referenceTo>Clan__c</referenceTo>
    <relationshipLabel>Badge Urls</relationshipLabel>
    <relationshipName>BadgeUrls</relationshipName>
    <type>Lookup</type>
</CustomField>