force-app/main/default/objects/BadgeUrls__c/fields/Large__c.field-meta.xml
<CustomField>
    <fullName>Large__c</fullName>
    <label>Large</label>
    <type>Url</type>
</CustomField>