force-app/main/default/objects/BadgeUrls__c/fields/WarClan__c.field-meta.xml
<CustomField>
    <fullName>WarClan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>War Clan</label>
    <referenceTo>WarClan__c</referenceTo>
    <relationshipLabel>Badge Urls</relationshipLabel>
    <relationshipName>BadgeUrls</relationshipName>
    <type>Lookup</type>
</CustomField>